--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script language="javascript" type="text/javascript" src="dollar.js"></script>
-    <script src="sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="StrokeAnimation.js"></script>
+    <script language="javascript" type="text/javascript" src="utils.js"></script>
+    <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 
     <title>Chairman's Timer</title>
@@ -56,6 +58,12 @@
                         <option value='Source Code Pro'>Source Code Pro</option>
                     </select>
                     <label for="floatingInput">Font</label>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="form-floating">
+                    <textarea id="message" class="form-control"></textarea>
+                    <label for="floatingInput">Message</label>
                 </div>
             </div>
 
