--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"
         integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ=="
         crossorigin="anonymous"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"
         integrity="sha512-wM+t5MzLiNHl2fwT5rWSXr2JMeymTtixiw2lWyVk1JK/jDM4RBSFoH4J8LjucwlDdY6Mu84Kj0gPXp7rLGaDyA=="
-        crossorigin="anonymous"></script> -->
-    <script src="p5.sound.min.js"></script>
+        crossorigin="anonymous"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
     <script language="javascript" type="text/javascript" src="dollar.js"></script>
     <script language="javascript" type="text/javascript" src="StrokeAnimation.js"></script>
     <script language="javascript" type="text/javascript" src="utils.js"></script>
@@ -174,6 +174,10 @@
                             <dd class="col-sm-9">Make a single click anywhere on the timer.</dd>
                             <dt class="col-sm3"> Reset timer</dt>
                             <dd class="col-sm-9">Make a double click anywhere on the timer.</dd>
+                            <dt class="col-sm3"> PC/Tablet/Smartphone</dt>
+                            <dd class="col-sm-9">If you wanna use table or smartphone, please make sure that your
+                                browser is not in desktop mode. On smartphone/table, WritableTimer is supposed to be
+                                used portrait mode because of noscrool mode.</dd>
                         </dl>
                     </div>
                     <div class="tab-pane fade" id="manual_start_stop" role="tabpanel" aria-labelledby="profile-tab">
