--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 
-    <title>Chairman's Timer</title>
+    <title>jsWritableTimer by Tetsuaki Baba</title>
 </head>
 
 <body id="body">
