--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
 
 
 
+        <!-- マニュアルボタン -->
         <p>
-            <button id='button_manual' class="btn btn-outline-secondary" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <button id='button_manual' class="btn btn-outline-secondary" value=false type="toggle"
+                data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                aria-controls="collapseExample">
                 show manual
             </button>
         </p>
