add github link

--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
 
 
         <hr>
-        <footer>Writable Timer by Tetsuaki Baba &copy; 2021,
+        <footer>
+            Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://tetsuakibaba.github.io/jsWritableTimer/"
+                target="_blank">github</a>
         </footer>
     </div>
 
