--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
         <hr>
         <footer>
             Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://tetsuakibaba.github.io/jsWritableTimer/"
-                target="_blank">github</a>
+                target="_blank">github</a>,
+            <br>All sound files are made by <a href="https://vsq.co.jp/special/se_environment/" target="_blank">VSQ free
+                sounds</a>
         </footer>
     </div>
 
