fixed italic font on safari

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inconsolata&family=Roboto+Mono:ital,wght@1,100&family=Share+Tech+Mono&family=Source+Code+Pro:wght@600&family=Syne+Mono&family=Xanh+Mono&display=swap"
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inconsolata&family=Roboto+Mono:ital,wght@1,100&family=Share+Tech+Mono&family=Xanh+Mono&display=swap"
         rel="stylesheet">
 
 
@@ -184,7 +184,8 @@
                     </div>
                     <div class="tab-pane fade" id="manual_start_stop" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="text-center"><img src="./gifs/start_stop.gif" class="img-fluid"
-                                alt="how to write 0"></div>
+                                alt="how to write 0">
+                        </div>
                     </div>
                     <div class="tab-pane fade" id="manual_reset" role="tabpanel" aria-labelledby="profile-tab">
                         <div class="text-center"><img src="./gifs/reset.gif" class="img-fluid" alt="how to write 0">
