minor bug fixed

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="app">
 
             <div class="row">
-                <div class="col-md">
+                <div class="col-3">
                     <div class="form-floating">
                         <select id="color_scheme" class="form-select">
                             <!-- background, timer color, sub color -->
@@ -58,23 +58,23 @@
                             <option value="#FFFFFF,#000000,#000000">black on white</option>
                             <option value="#000000,#FFFFFF,#FFFFFF">white on black</option>
                         </select>
-                        <label for="floatingInput">Color Scheme</label>
+                        <label for="floatingInput">Color</label>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-3">
                     <div class="form-floating">
                         <select id="font" class="form-select">
                             <option value='Share Tech Mono' selected> Share Tech Mono [regular]</option>
                             <option value='IBM Plex Mono'>IBM Plex Mono [regular]</option>
                             <option value='Roboto Mono'>Robot Mono [thin,italic] </option>
                             <option value='Cutive Mono'>Cutive Mono [thin,regular]</option>
-                            <option value='Inconsolata'>Inconsolata[regular]</option>
-                            <option value='Xanh Mono'>Xanh Mono[regular]</option>
+                            <option value='Inconsolata'>Inconsolata [regular]</option>
+                            <option value='Xanh Mono'>Xanh Mono [regular]</option>
                         </select>
                         <label for="floatingInput">Font</label>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-2">
                     <div class="form-floating">
                         <select id="sound" class="form-select">
                             <option value='No sound' selected>No sound</option>
@@ -85,7 +85,7 @@
                         <label for="floatingInput">Bell</label>
                     </div>
                 </div>
-                <div class="col-md">
+                <div class="col-4">
                     <div class="form-floating">
                         <textarea id="message" class="form-control"></textarea>
                         <label for="floatingInput">Message</label>
