--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                         <div class="tab-pane fade" id="manual_obs" role="tabpanel" aria-labelledby="contact-tab">
 
                             <h5>How to use jsWritableTimer on OBS</h5>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/147w_jFvK5c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <ol>
                                 <li>Copy share link by clicking copy share link button on the page.</li>
                                 <li>Open OBS and add browser source and set belows</li>
@@ -292,7 +293,7 @@
         </div>
 
         <footer>
-            Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://tetsuakibaba.github.io/jsWritableTimer/" target="_blank">github</a>,
+            Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://github.com/TetsuakiBaba/jsWritableTimer" target="_blank">github</a>,
             <br>All sound files are made by <a href="https://vsq.co.jp/special/se_environment/" target="_blank">VSQ free
                 sounds</a>
         </footer>
