--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inconsolata&family=Roboto+Mono:ital,wght@1,100&family=Share+Tech+Mono&family=Xanh+Mono&family=Cutive+Mono&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inconsolata&family=Roboto+Mono:ital,wght@1,100&family=Share+Tech+Mono&family=Xanh+Mono&family=Cutive+Mono&display=swap"
+        rel="stylesheet">
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js" integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"
+        integrity="sha512-b/htz6gIyFi3dwSoZ0Uv3cuv3Ony7EeKkacgrcVg8CMzu90n777qveu0PBcbZUA7TzyENGtU+qZRuFAkfqgyoQ=="
+        crossorigin="anonymous"></script>
     <script src="p5.sound.min.js"></script>
     <script language="javascript" type="text/javascript" src="dollar.js"></script>
     <script language="javascript" type="text/javascript" src="StrokeAnimation.js"></script>
@@ -83,30 +90,65 @@
                 </div>
 
             </div>
+
+            <div class="row" id="checkbox_pre_bell" hidden>
+                <div class="col-6">
+
+                </div>
+                <div class="col-6">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" value='1' type="checkbox" id="switch_pre_bell_1">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">1 min left</label>
+                    </div>
+                </div>
+                <div class="col-6">
+
+                </div>
+                <div class="col-6">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" value='5' type="checkbox" id="switch_pre_bell_2">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">5 min left</label>
+                    </div>
+                </div>
+                <div class="col-6">
+
+                </div>
+                <div class="col-6">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" value='10' type="checkbox" id="switch_pre_bell_3">
+                        <label class="form-check-label" for="flexSwitchCheckDefault">10 min left</label>
+                    </div>
+                </div>
+                <div class="col-6">
+
+                </div>
+            </div>
+
+
         </div>
 
         <hr>
 
-
-
-
         <!-- マニュアルボタン -->
         <div id="manual">
             <p>
-                <div class="row">
-                    <div class="col-4">
-                        <button id='button_manual' class="btn btn-outline-secondary" value=false type="toggle" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <div class="row">
+                <div class="col-3">
+                    <button id='button_manual' class="btn btn-outline-secondary" value=false type="toggle"
+                        data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
+                        aria-controls="collapseExample">
                         show manual
                     </button>
-                    </div>
-                    <div class="col-8">
-                        <div class="input-group mb-3">
-                            <input id='text_share_link' type="text" class="form-control" placeholder="share link text" aria-label="Recipient's username" aria-describedby="button-addon2" readonly>
-                            <button class="btn btn-outline-secondary" type="button" id="button_copy_share_link">copy share
+                </div>
+                <div class="col-9">
+                    <div class="input-group mb-3">
+                        <input id='text_share_link' type="text" class="form-control" placeholder="share link text"
+                            aria-label="Recipient's username" aria-describedby="button-addon2" readonly>
+                        <button class="btn btn-outline-secondary" type="button" id="button_copy_share_link">copy share
                             link</button>
-                        </div>
                     </div>
                 </div>
+            </div>
 
 
             </p>
@@ -114,64 +156,83 @@
                 <div class="card card-body">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#manual_description" role="tab" aria-controls="home" aria-selected="true">Description</a>
+                            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#manual_description"
+                                role="tab" aria-controls="home" aria-selected="true">Description</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_start_stop" role="tab" aria-controls="profile" aria-selected="false">start/stop</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_start_stop"
+                                role="tab" aria-controls="profile" aria-selected="false">start/stop</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_reset" role="tab" aria-controls="profile" aria-selected="false">reset</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_reset" role="tab"
+                                aria-controls="profile" aria-selected="false">reset</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_clear" role="tab" aria-controls="profile" aria-selected="false">clear</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual_clear" role="tab"
+                                aria-controls="profile" aria-selected="false">clear</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual0" role="tab" aria-controls="profile" aria-selected="false">0</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual0" role="tab"
+                                aria-controls="profile" aria-selected="false">0</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual1" role="tab" aria-controls="contact" aria-selected="false">1</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual1" role="tab"
+                                aria-controls="contact" aria-selected="false">1</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual2" role="tab" aria-controls="profile" aria-selected="false">2</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual2" role="tab"
+                                aria-controls="profile" aria-selected="false">2</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual3" role="tab" aria-controls="contact" aria-selected="false">3</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual3" role="tab"
+                                aria-controls="contact" aria-selected="false">3</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual4" role="tab" aria-controls="profile" aria-selected="false">4</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual4" role="tab"
+                                aria-controls="profile" aria-selected="false">4</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual5" role="tab" aria-controls="contact" aria-selected="false">5</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual5" role="tab"
+                                aria-controls="contact" aria-selected="false">5</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual6" role="tab" aria-controls="profile" aria-selected="false">6</a>
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#manual6" role="tab"
+                                aria-controls="profile" aria-selected="false">6</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual7" role="tab" aria-controls="contact" aria-selected="false">7</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual7" role="tab"
+                                aria-controls="contact" aria-selected="false">7</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual8" role="tab" aria-controls="contact" aria-selected="false">8</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual8" role="tab"
+                                aria-controls="contact" aria-selected="false">8</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual9" role="tab" aria-controls="contact" aria-selected="false">9</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual9" role="tab"
+                                aria-controls="contact" aria-selected="false">9</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_color" role="tab" aria-controls="contact" aria-selected="false">color</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_color" role="tab"
+                                aria-controls="contact" aria-selected="false">color</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_font" role="tab" aria-controls="contact" aria-selected="false">font</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_font" role="tab"
+                                aria-controls="contact" aria-selected="false">font</a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_obs" role="tab" aria-controls="contact" aria-selected="false">Using with OBS</a>
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#manual_obs" role="tab"
+                                aria-controls="contact" aria-selected="false">Using with OBS</a>
                         </li>
                     </ul>
 
                     </ul>
                     <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade show active" id="manual_description" role="tabpanel" aria-labelledby="home-tab">
+                        <div class="tab-pane fade show active" id="manual_description" role="tabpanel"
+                            aria-labelledby="home-tab">
                             <dl class="row">
                                 <dt class="col-sm3"> How to set time </dt>
-                                <dd class="col-sm-9">Write a number on the canvas. Please check each tab links to check how to write each number on a unistroke with animation gifs. </dd>
+                                <dd class="col-sm-9">Write a number on the canvas. Please check each tab links to check
+                                    how to write each number on a unistroke with animation gifs. </dd>
                                 <dt class="col-sm3"> Clear time </dt>
                                 <dd class="col-sm-9">Write a 'c' anywhere on the timer. write</dd>
                                 <dt class="col-sm3"> Start timer</dt>
@@ -179,11 +240,14 @@
                                 <dt class="col-sm3"> Reset timer</dt>
                                 <dd class="col-sm-9">Make a double click anywhere on the timer.</dd>
                                 <dt class="col-sm3"> PC/Tablet/Smartphone</dt>
-                                <dd class="col-sm-9">If you wanna use table or smartphone, please make sure that your browser is not in desktop mode. On smartphone/table, WritableTimer is supposed to be used portrait mode because of noscrool mode.</dd>
+                                <dd class="col-sm-9">If you wanna use table or smartphone, please make sure that your
+                                    browser is not in desktop mode. On smartphone/table, WritableTimer is supposed to be
+                                    used portrait mode because of noscrool mode.</dd>
                             </dl>
                         </div>
                         <div class="tab-pane fade" id="manual_start_stop" role="tabpanel" aria-labelledby="profile-tab">
-                            <div class="text-center"><img src="./gifs/start_stop.gif" class="img-fluid" alt="how to write 0">
+                            <div class="text-center"><img src="./gifs/start_stop.gif" class="img-fluid"
+                                    alt="how to write 0">
                             </div>
                         </div>
                         <div class="tab-pane fade" id="manual_reset" role="tabpanel" aria-labelledby="profile-tab">
@@ -268,7 +332,10 @@
                         <div class="tab-pane fade" id="manual_obs" role="tabpanel" aria-labelledby="contact-tab">
 
                             <h5>How to use jsWritableTimer on OBS</h5>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/147w_jFvK5c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/147w_jFvK5c"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                             <ol>
                                 <li>Copy share link by clicking copy share link button on the page.</li>
                                 <li>Open OBS and add browser source and set belows</li>
@@ -293,7 +360,8 @@
         </div>
 
         <footer>
-            Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://github.com/TetsuakiBaba/jsWritableTimer" target="_blank">github</a>,
+            Writable Timer by Tetsuaki Baba &copy; 2021, <a href="https://github.com/TetsuakiBaba/jsWritableTimer"
+                target="_blank">github</a>,
             <br>All sound files are made by <a href="https://vsq.co.jp/special/se_environment/" target="_blank">VSQ free
                 sounds</a>
         </footer>
