予鈴機能を追加

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             </div>
 
-            <div class="row" id="checkbox_pre_bell">
+            <div class="row" id="checkbox_pre_bell" hidden>
                 <div class="col-6">
 
                 </div>
