オリンピックっぽい表示を追加

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="./style.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
@@ -54,6 +56,7 @@
                             <option value="#FFFFFF,#F04D29,#06ABF4">office</option>
                             <option value="#FFFFFF,#000000,#000000">black on white</option>
                             <option value="#000000,#FFFFFF,#FFFFFF">white on black</option>
+                            <option value="#0B0803,#D9A404,#FFFFFF">olympic games</option>
                         </select>
                         <label for="floatingInput">Color</label>
                     </div>
@@ -67,6 +70,7 @@
                             <option value='Cutive Mono'>Cutive Mono [thin,regular]</option>
                             <option value='Inconsolata'>Inconsolata [regular]</option>
                             <option value='Xanh Mono'>Xanh Mono [regular]</option>
+                            <option value='DSEG7Classic-Italic'>DSEG7Classic-Italic [italic]</option>
                         </select>
                         <label for="floatingInput">Font</label>
                     </div>
