athleteテーマを追加

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <option value="#FFFFFF,#F04D29,#06ABF4">office</option>
                             <option value="#FFFFFF,#000000,#000000">black on white</option>
                             <option value="#000000,#FFFFFF,#FFFFFF">white on black</option>
-                            <option value="#0B0803,#D9A404,#FFFFFF">olympic games</option>
+                            <option value="#0B0803,#D9A404,#FFFFFF">athlete</option>
                         </select>
                         <label for="floatingInput">Color</label>
                     </div>
