safariで正しくイタリックが表示されなかった問題を修正

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <option value='Cutive Mono'>Cutive Mono [thin,regular]</option>
                             <option value='Inconsolata'>Inconsolata [regular]</option>
                             <option value='Xanh Mono'>Xanh Mono [regular]</option>
-                            <option value='DSEG7Classic-Italic'>DSEG7Classic-Italic [italic]</option>
+                            <option value='DSEG7Classic-Italic'>DSEG7Classic-Italic </option>
                         </select>
                         <label for="floatingInput">Font</label>
                     </div>
